maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:8: error: forward reference extends over definition of value sortie
  val sortie = findExit();
               ^ShortestPathMaze:9: error: forward reference extends over definition of value X
  marquerSol(sortie, 0);
  ^ShortestPathMaze:9: error: forward reference extends over definition of value Y
  marquerSol(sortie, 0);
  ^